--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -112,3 +112,14 @@ $radius-multiplier: 1.5;
   flex-wrap: wrap;
   flex-direction: column;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
