--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -163,3 +163,60 @@ input[type="number"] {
 // .q-table--dense .q-table td {
 //   padding: 0;
 // }
+
+.month-limit {
+  background: rgba(255, 192, 0, 255);
+}
+
+.used-limit {
+  background: rgba(180, 199, 231, 255);
+}
+
+.today-limit {
+  background: rgba(47, 85, 151, 255);
+  color: white;
+}
+
+.unused-limit {
+  background: rgba(89, 89, 89, 255);
+  color: white;
+}
+
+.btn-form {
+  height: 32px;
+}
+
+.hovered-order {
+  background: linear-gradient(-45deg, rgba(59, 127, 36, 0.37), white);
+  background-size: 400% 400%;
+  animation: gradient 2s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.ended-order {
+  position: relative;
+}
+
+.ended-order::after {
+  position: absolute;
+  height: 2px;
+  content: "";
+  top: 50%;
+  bottom: 50%;
+  right: 5px;
+  left: 5px;
+  border: 1px solid grey;
+}
