--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -92,7 +92,7 @@ $radius-multiplier: 1.5;
 
 .my-sticky-header-table {
   /* height or max-height is important */
-  height: 310px;
+  // height: 310px;
   /* this is when the loading indicator appears */
 }
 
